[gd_scene load_steps=16 format=3 uid="uid://bsalesakrx8yy"]

[ext_resource type="Script" uid="uid://cr2tvfn348vex" path="res://scripts/npcs/npc_script.gd" id="1_1dp2i"]
[ext_resource type="Script" uid="uid://8t63d3un22ug" path="res://scripts/npcs/npc_data.gd" id="2_8xmgr"]
[ext_resource type="Texture2D" uid="uid://ybgaeplkp4q0" path="res://graphics/ui/talk_indicator_standard.png" id="2_ejx50"]
[ext_resource type="Script" uid="uid://dfsq4f80e2bal" path="res://scripts/npcs/npc_movement.gd" id="2_fvlbl"]
[ext_resource type="Script" uid="uid://bwcja16pmp3mf" path="res://scripts/npcs/npc_sprite_state.gd" id="2_jivhs"]
[ext_resource type="Script" uid="uid://bjesn36acj0uh" path="res://scripts/quests/story_requirements.gd" id="3_nhgc8"]
[ext_resource type="AudioStream" uid="uid://bj0i1vekyc0vn" path="res://audio/sfx/step1.ogg" id="5_j1v18"]
[ext_resource type="AudioStream" uid="uid://cm2q5q5k4y6aa" path="res://audio/sfx/step2.ogg" id="6_qf463"]
[ext_resource type="AudioStream" uid="uid://djue6exjyyyhj" path="res://audio/sfx/step3.ogg" id="7_jivhs"]

[sub_resource type="Resource" id="Resource_mvove"]
script = ExtResource("2_jivhs")
id = "default"
priority = -1
storyRequirements = Array[ExtResource("3_nhgc8")]([])
autoApplyState = false

[sub_resource type="Resource" id="Resource_5hka4"]
script = ExtResource("2_8xmgr")
saveName = "npc"
spriteState = "default"
animation = "stand"
position = Vector2(0, 0)
flipH = false
visible = true
selectedTarget = 0
loops = 0
disableMovement = false
previousDisableMove = false
afterMoveWaitAccum = 0.0
followerHomePosition = Vector2(0, 0)
followingPlayer = false
followerHomeSet = false
combatMode = false
version = ""
dialogueItems = []
dialogueIndex = -1
dialogueItemIdx = -1
dialogueLine = -1

[sub_resource type="SpriteFrames" id="SpriteFrames_518hb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jblse"]
size = Vector2(15.5, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ycftu"]
size = Vector2(24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wk2vr"]
size = Vector2(32, 32)

[node name="NPC" type="CharacterBody2D" groups=["AutonomousMove", "NPC", "Persist"]]
z_index = -10
motion_mode = 1
script = ExtResource("1_1dp2i")
spriteStatesDict = Dictionary[String, ExtResource("2_jivhs")]({
"default": SubResource("Resource_mvove")
})
data = SubResource("Resource_5hka4")

[node name="NPCSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_518hb")

[node name="TalkAlertSprite" type="Sprite2D" parent="NPCSprite"]
visible = false
z_index = 2
z_as_relative = false
position = Vector2(0, -14)
texture = ExtResource("2_ejx50")

[node name="ColliderShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jblse")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 2.0
target_desired_distance = 2.0
path_max_distance = 128.0
radius = 16.0
neighbor_distance = 100.0
max_neighbors = 5
max_speed = 2.0
script = ExtResource("2_fvlbl")
stepSfx = Array[AudioStream]([ExtResource("5_j1v18"), ExtResource("6_qf463"), ExtResource("7_jivhs")])

[node name="TalkArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="TalkAreaShape" type="CollisionShape2D" parent="TalkArea"]
shape = SubResource("RectangleShape2D_ycftu")

[node name="MoveTrigger" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="MoveTriggerShape" type="CollisionShape2D" parent="MoveTrigger"]
shape = SubResource("RectangleShape2D_wk2vr")

[connection signal="animation_finished" from="NPCSprite" to="." method="_on_npc_sprite_animation_finished"]
[connection signal="navigation_finished" from="NavAgent" to="NavAgent" method="_on_navigation_finished"]
[connection signal="target_reached" from="NavAgent" to="NavAgent" method="_on_target_reached"]
[connection signal="area_entered" from="TalkArea" to="." method="_on_talk_area_area_entered"]
[connection signal="area_exited" from="TalkArea" to="." method="_on_talk_area_area_exited"]
[connection signal="area_entered" from="MoveTrigger" to="." method="_on_move_trigger_area_entered"]
